2006-02-21  Luc Pionchon  <luc.pionchon@nokia.com>

	* ChangeLog-hildon-lgpl: copied from old hildon-lgpl/ChangeLog for
	reference

2006-02-21  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.1

2006-02-21  Johan Bilien  <johan.bilien@nokia.com>

	* doc/tmpl/hildon-program.sgml: added from hildon-lgpl HW branch
	* doc/tmpl/hildon-window.sgml: likewise.
	* hildon-widgets/hildon-program.[ch]: likewise.
	* hildon-widgets/hildon-window.[ch]: likewise.
	* hildon-widgets/hildon-window-private.h: likewise.
	* hildon-widgets/Makefile.am: Added these new files to the build
	  and distribution.

2006-02-14  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.0

	Merged hildon-lgpl into hildon-libs (and hildon-fm)

	* doc/tmpl/hildon-system-sound.sgml: added from hildon-lgpl
	* doc/tmpl/hildon-appview.sgml: likewise.
	* doc/tmpl/hildon-color-popup.sgml: likewise.
	* doc/tmpl/hildon-find-toolbar.sgml: likewise.
	* doc/tmpl/hildon-app.sgml: likewise.
	* doc/tmpl/hildon-input-mode-hint.sgml: likewise.
	* doc/tmpl/hildon-caption.sgml: likewise.
	* doc/tmpl/hildon-marshalers.sgml: likewise.
	* doc/tmpl/hildon-add-home-dialog.sgml: likewise.
	* doc/tmpl/hildon-defines.sgml: likewise.
	* doc/tmpl/gtk-infoprint.sgml: likewise.
	* doc/tmpl/hildon-composite-widget.sgml: likewise.

	* hildon-widgets/gtk-infoprint.[ch]: added from hildon-lgpl
	* hildon-widgets/hildon-app.[ch]:likewise.
	* hildon-widgets/hildon-app-private.h:likewise.
	* hildon-widgets/hildon-appview.[ch]:likewise.
	* hildon-widgets/hildon-caption.[ch]:likewise.
	* hildon-widgets/hildon-defines.[ch]:likewise.
	* hildon-widgets/hildon-find-toolbar.[ch]:likewise.
	* hildon-widgets/hildon-input-mode-hint.h:likewise.
	
	* hildon-widgets/Makefile.am (libhildonwidgets_la_SOURCES): 
	removed hildon-file-details-dialog.[ch] (moved to hildon-fm)
	added,
	    gtk-infoprint.[ch]
	    hildon-app.[ch]
	    hildon-app-private.h
	    hildon-appview.[ch]
	    hildon-caption.[ch]
	    hildon-defines.[ch]