@@ -1,5 +1,10 @@
 2006-02-21  Luc Pionchon  <luc.pionchon@nokia.com>
 
+	* hildon-widgets/hildon-color-button.c: added comments
+	* hildon-widgets/hildon-controlbar.c: Likewise.
+	* hildon-widgets/hildon-composite-widget.c: Likewise.
+	* hildon-widgets/hildon-calendar-popup.c: Likewise.
+
 	* ChangeLog-hildon-lgpl: copied from old hildon-lgpl/ChangeLog for
 	reference
 
